[toy] add naive contracts example

--- a/toy/Makefile
+++ b/toy/Makefile
@@ -1,5 +1,7 @@
 SRC := $(shell find . -name "*.py")
 
+.PHONY: format test clean
+
 format:
 	@autoflake --remove-all-unused-imports -i $(SRC) \
 		&& isort $(SRC) \
@@ -11,3 +13,4 @@ test:
 clean:
 	@find . -name "__pycache__" -print0 | xargs -0 rm -rfv
 	@find . -name ".pytest_cache" -print0 | xargs -0 rm -rfv
+	@find . -name ".hypothesis" -print0 | xargs -0 rm -rfv
